tests/paczka1/fuzzy1/40266672.err
Error in line 1: pzwa5Rto A93 26,6
Error in line 6: GE6g2KvXtQp A814 96,4
Error in line 5: ouMvSt55 A814 13,6
Error in line 12: GE6g2KvXtQp A817 55,0
Error in line 9: pzwa5Rto A817 70,1
Error in line 26: RMe A814 62,2
Error in line 20: rz06Ao0rk S36 1,0
Error in line 33: rz06Ao0rk A93 -1,9
Error in line 31: rz06Ao0rk A93 3,2
Error in line 24: ouMvSt55 A93 71,2
